--- a/SolBusGrupo15Laboratorio/src/vistas/CompraPasaje.form
+++ b/SolBusGrupo15Laboratorio/src/vistas/CompraPasaje.form
@@ -79,7 +79,7 @@
                                   <Component id="jLabel5" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel13" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="7" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Component id="jScrollPane2" alignment="1" min="-2" pref="130" max="-2" attributes="0"/>
                                   <Component id="jScrollPane1" alignment="1" min="-2" pref="130" max="-2" attributes="0"/>
@@ -289,7 +289,7 @@
                               </Group>
                           </Group>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="JTDNIPasajero" pref="115" max="32767" attributes="0"/>
+                              <Component id="JTDNIPasajero" max="32767" attributes="0"/>
                               <Component id="JTTelefono" alignment="1" max="32767" attributes="0"/>
                               <Component id="JTCorreo" max="32767" attributes="0"/>
                               <Component id="JTApellido" max="32767" attributes="0"/>
